--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+@import url(https://fonts.googleapis.com/css?family=Oswald);
+
+body {
+	font-family: 'Oswald', 'Futura', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.question {
+  border: solid;
+  margin: 20px; 
+	padding: 20px;
+  width: fit-content;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table thead > tr:nth-child(odd) td{
+  background:#333;
+  color: #fff;
+  padding: 4px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+table tr:nth-child(odd) td{
+  background:#ccc;
+  padding: 4px;
+}
+table tr:nth-child(even) td{
+   background:#fff;
+   padding: 4px;
+}
+
+.joke {
+  color: navy;
+}
+
+.formRow {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 2px;
+  margin-right: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.formRow > * {
+  flex: 1 2 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  text-align: right;
+  padding: 3px;
 }
